--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a {
 }
 
 .first-nav ul {
-    width: 50%;
+    width: 65%;
     padding-right: 1.5%;
 
 }
@@ -168,17 +168,18 @@ p:hover {
     margin-left: 10%;
 }
 
+.home-section .white-color {
+    color: white;
+}
+
 .home-section .items-d-flex h1 {
-    width: 55px;
-    height: 48px;
     border: 4px #8d8d8d solid;
     text-align: center;
     border-radius: 50%;
-}
+    padding: 3% 6%;}
 
 .home-section :nth-child(2) h1 {
-    width: 55px;
-    height: 48px;
+    padding: 3% 6%;
     border: 4px blue solid;
     text-align: center;
     border-radius: 50%;
